import "ServiceCommon.proto"

service MgRenderingService {

}