syntax = "proto3";
option csharp_namespace = "OSGeo.MapGuide";

message NameValuePair {
    string name = 1;
    string value = 2;
}

message Envelope {
    /*required*/ double min_x = 1;
    /*required*/ double min_y = 2;
    /*required*/ double max_x = 3;
    /*required*/ double max_y = 4;
}

message BasicResponse {
    Error error = 1; //An error if one was raised by the service operation
}

message PropertyValue {
    /*required*/ string name = 1;
    oneof property_value {
        bool bool_value = 2;
        int32 byte_value = 3;
        string datetime_value = 4;
        float single_value = 5;
        double double_value = 6;
        int32 int16_value = 7;
        int32 int32_value = 8;
        int64 int64_value = 9;
        string string_value = 10;
        bytes blob_value = 11;
        bytes clob_value = 12;
        FeatureRecord feature_value = 13;
        bytes geometry_value = 14;
        bytes raster_value = 15;
        double decimal_value = 16;
    }
}

message DataPropertyDescriptor {
    /*required*/ string name = 1;
    /*required*/ FdoDataType data_type = 2;
}

message DataRecordHeader {
    repeated DataPropertyDescriptor properties = 1;
}

message DataRecord { //TODO: Maybe this should be a oneof
    Error error = 1; //An error if one was raised by the service operation. This only exists in the first data record
    DataRecordHeader header = 2; //A data record header describing the structure of the data record. This only exists on the first data record
    repeated PropertyValue values = 3;  //The property values of the data record
}

message FeatureRecord { //TODO: Maybe this should be a oneof
    Error error = 1; //An error if one was raised by the service operation. This only exists in the first data record
    ClassDefinition header = 2; //A class definition describing the structure of the feature. This only exists on the first feature record
    repeated PropertyValue values = 3; //The property values of the feature record
}

message ResourceIdentifier {
    /*required*/ string name = 1;
    /*required*/ string path = 2;
    /*required*/ string repository_name = 3;
    /*required*/ string repository_type = 4;
    /*required*/ string resource_type = 5;
}

message Error {
    /*required*/ string name = 1;
    /*required*/ string message = 2;
    repeated string stack = 3;
}

message StringCollection {
    repeated string items = 1;
}

message FeatureSchema {
    /*required*/ string name = 1;
    string description = 2;
    repeated ClassDefinition classes = 3;
    bool marked_for_delete = 4;
}

message ClassDefinition {
    /*required*/ string name = 1;
    string description = 2;
    string geom_name = 3;
    repeated PropertyDefinition properties = 4;
    bool marked_for_delete = 5;
}

message PropertyDefinition {
    oneof property_type {
        DataPropertyDefinition data = 1;
        GeometricPropertyDefinition geom = 2;
        RasterPropertyDefinition raster = 3;
    }
    bool marked_for_delete = 4;
}

enum FdoDataType {
    Blob = 0;
    Boolean = 1;
    Byte = 2;
    Clob = 3;
    DateTime = 4;
    Decimal = 5;
    Double = 6;
    Int16 = 7;
    Int32 = 8;
    Int64 = 9;
    Single = 10;
    String = 11;
}

message RasterPropertyDefinition {
    /*required*/ string name = 1;
    string description = 2;
    bool is_read_only = 3;
    bool is_nullable = 4;
    string spatial_context = 5;
    /*required*/ int32 image_x_size = 6;
    /*required*/ int32 image_y_size = 7;
}

message DataPropertyDefinition {
    /*required*/ string name = 1;
    string description = 2;
    /*required*/ FdoDataType data_type = 3;
    bool is_read_only = 4;
    bool is_nullable = 5;
    bool is_autogenerated = 6;
    int32 string_length = 7;
    int32 decimal_precision = 8;
    int32 decimal_scale = 9;
}

message GeometricPropertyDefinition {
    /*required*/ string name = 1;
    string description = 2;
    string spatial_context = 3;
    int32 geometry_type = 4;
    int32 specific_geometry_type = 5;
    bool is_read_only = 6;
    bool has_elevation = 7;
}

message TransactionRef {
    /*required*/ string id = 1;
}

message Parameter {
    /*required*/ string name = 1;
    /*required*/ PropertyValue value = 2;
}

message ParameterCollection {
    repeated Parameter values = 1;
}

message FdoProviderCapabilities {

}

message FdoProviderInfo {

}

message FdoDataStoreConfiguration {

}

message QueryProperty {
    oneof type {
        QueryPropertyIdentifier identifier = 1;
        QueryPropertyComputed computed = 2;
    }
}

message QueryPropertyIdentifier {
    /*required*/ string name = 1;
}

message QueryPropertyComputed {
    /*required*/ string alias = 1;
    /*required*/ string expression = 2;
}

message GroupingFilter {
    /*required*/ StringCollection group_by = 1;
    /*required*/ string having_filter = 2;
}

message AggregateQueryOptions {
    repeated QueryProperty properties = 1;
    bool binaryOp = 2;
    int32 fetch_size = 3;
    string filter = 4;
    bool distinct = 5;
    GroupingFilter group_filter = 6;
}

message FeatureQueryOptions {
    repeated QueryProperty properties = 1;
    bool binaryOp = 2;
    int32 fetch_size = 3;
    string filter = 4;
}

message FeatureCommand {
    /*required*/ string class_name = 1;
    oneof type {
        InsertFeaturesCommand insert = 2;
        UpdateFeaturesCommand update = 3;
        DeleteFeaturesCommand delete = 4;
    }
}

message InsertFeaturesCommand {
    repeated PropertyValue values = 1;
}

message UpdateFeaturesCommand {
    repeated PropertyValue values = 1;
    string filter = 2;
}

message DeleteFeaturesCommand {
    string filter = 1;
}